<resources>
    <string name="byedpi_docs">https://github.com/hufrea/byedpi/blob/v0.13/README.md</string>
    <string name="app_name">ByeDPI Россия</string>
    <string name="vpn_connect">Подключить</string>
    <string name="vpn_disconnect">Отключить</string>
    <string name="vpn_connected">Подключено (VPN активен)</string>
    <string name="vpn_disconnected">Отключено</string>
    <string name="proxy_up">Прокси запущен</string>
    <string name="proxy_down">Прокси остановлен</string>
    <string name="proxy_start">Запустить</string>
    <string name="proxy_stop">Остановить</string>
    <string name="settings">Настройки</string>
    <string name="vpn_permission_denied">В разрешении на VPN отказано</string>
    <string name="settings_unavailable">Пожалуйста, остановите VPN перед изменением настроек</string>
    <string name="title_settings">Настройки ByeDPI</string>
    <string name="save_logs">Сохранить логи</string>
    <string name="reset_settings">Сбросить</string>
    <string name="logs_failed">Не удалось собрать логи</string>
    <string name="proxy_address">%1$s:%2$s</string>
    <string name="theme_settings">Тема оформления</string>
    <string name="accent_color_setting">Акцентный цвет</string>
    <string name="mode_setting">Режим работы</string>
    <string name="dbs_ip_setting">DNS сервер</string>
    <string name="bye_dpi_proxy_ip_setting">Адрес прокси</string>
    <string name="byedpi_proxy_port_setting">Порт прокси</string>
    <string name="byedpi_max_connections_setting">Макс. соединений</string>
    <string name="byedpi_buffer_size_setting">Размер буфера</string>
    <string name="byedpi_default_ttl_setting">Стандартный TTL</string>
    <string name="byedpi_no_domain_setting">Не резолвить домены</string>
    <string name="byedpi_desync_method_setting">Метод десинхронизации</string>
    <string name="byedpi_split_position_setting">Позиция сплита</string>
    <string name="byedpi_split_at_host_setting">Сплит по хосту/SNI</string>
    <string name="byedpi_fake_ttl_setting">TTL фейковых пакетов</string>
    <string name="byedpi_host_mixed_case_setting">Смешанный регистр Host</string>
    <string name="byedpi_domain_mixed_case_setting">Смешанный регистр домена</string>
    <string name="byedpi_host_remove_spaces_setting">Удалять пробелы в Host</string>
    <string name="byedpi_tlsrec_enabled_setting">Фрагментация TLS Record</string>
    <string name="byedpi_tlsrec_position_setting">Позиция сплита TLS Record</string>
    <string name="byedpi_tlsrec_at_sni_setting">Сплит TLS Record по SNI</string>
    <string name="version">Версия</string>
    <string name="source_code_link">Исходный код</string>
    <string name="byedpi_readme_link">Справка по параметрам</string>
    <string name="failed_to_start">Не удалось запустить %1$s</string>
    <string name="vpn_channel_name">VPN соединение</string>
    <string name="proxy_channel_name">Прокси сервер</string>
    <string name="notification_title">ByeDPI Россия</string>
    <string name="vpn_notification_content">Защита и обход DPI активны</string>
    <string name="proxy_notification_content">Локальный прокси запущен</string>
    <string name="general_category">Основные</string>
    <string name="byedpi_category">Параметры ByeDPI</string>
    <string name="about_category">О программе</string>
    <string name="command_line_editor">Редактор командной строки</string>
    <string name="ui_editor">Графический редактор</string>
    <string name="use_command_line_settings">Настройки командной строки</string>
    <string name="desync_http">Десинхронизация HTTP</string>
    <string name="desync_https">Десинхронизация HTTPS</string>
    <string name="desync_udp">Десинхронизация UDP</string>
    <string name="oob_data">OOB байт</string>
    <string name="sni_of_fake_packet">Фейковый SNI</string>
    <string name="byedpi_proxy">Прокси</string>
    <string name="byedpi_desync">Десинхронизация</string>
    <string name="command_line_arguments">Аргументы запуска</string>
    <string name="byedpi_hosts_mode_setting">Режим списков хостов</string>
    <string name="byedpi_hosts_blacklist_setting">Черный список</string>
    <string name="byedpi_hosts_whitelist_setting">Белый список</string>
    <string name="byedpi_tcp_fast_open_setting">TCP Fast Open</string>
    <string name="byedpi_udp_fake_count">Количество фейковых UDP пакетов</string>
    <string name="ipv6_setting">Поддержка IPv6</string>
    <string name="byedpi_fake_offset_setting">Смещение фейка</string>
    <string name="byedpi_drop_sack_setting">Сбрасывать SACK</string>
    <string name="desync_udp_category">UDP протокол</string>
    <string name="desync_http_category">HTTP протокол</string>
    <string name="desync_https_category">HTTPS протокол</string>
    <string name="byedpi_protocols_category">Протоколы</string>
    <string name="byedpi_protocols_hint">Снимите все галочки, чтобы десинхронизировать весь трафик</string>
    <string name="auto_tune_button">⚡ Автоподбор стратегии</string>
    <string name="current_strategy_label">Текущая стратегия:</string>
    <string name="testing_strategy_title">Подбор лучшей стратегии...</string>
    <string name="testing_strategy_msg">Тестируем доступность YouTube и Discord...</string>
    <string name="strategy_selected_title">Стратегия подобрана!</string>
    <string name="strategy_selected_msg">Выбрана оптимальная стратегия: %1$s (задержка: %2$d мс)</string>
    <string name="strategy_manual_select">Выбрать стратегию вручную</string>
    <string name="status_testing">Тестирование стратегий (%1$d/%2$d)...</string>
    <string name="tg_proxy_title">Telegram MTProto Прокси</string>
    <string name="tg_proxy_subtitle">Прямой обход блокировок ТГ через Cloudflare WS</string>
    <string name="tg_proxy_status_stopped">Остановлен (127.0.0.1:1443)</string>
    <string name="tg_proxy_status_running">Работает (127.0.0.1:1443)</string>
    <string name="tg_proxy_btn_start">Запустить прокси</string>
    <string name="tg_proxy_btn_stop">Остановить</string>
    <string name="tg_proxy_btn_apply">🚀 Применить в Telegram</string>
    <string name="tg_proxy_btn_copy">Копировать ссылку</string>
    <string name="tg_proxy_copied">Ссылка на прокси скопирована!</string>
    <string name="warp_card_title">Cloudflare WARP (AmneziaWG)</string>
    <string name="warp_card_subtitle">Обфусцированный WireGuard против ТСПУ</string>
    <string name="warp_btn_generate">✨ Сгенерировать новый WARP</string>
    <string name="warp_btn_copy">Скопировать конфиг (.conf)</string>
    <string name="warp_btn_connect">Включить WARP</string>
    <string name="warp_btn_disconnect">Отключить WARP</string>
    <string name="warp_btn_open_amnezia">Поделиться / Amnezia</string>
    <string name="warp_btn_edit">✏️ Редактировать конфиг</string>
    <string name="warp_copied">Конфигурация AmneziaWG скопирована!</string>
    <string name="warp_generating">Генерация WARP профиля...</string>
    <string name="warp_generated_success">Новый WARP успешно сгенерирован!</string>
    <string name="warp_generated_error">Ошибка генерации: %1$s</string>
    <string name="btn_advanced_settings">⚙️ Продвинутые настройки и стратегии</string>
    <string name="title_advanced_settings">Продвинутые настройки</string>
    <string name="app_subtitle_clean">Единый центр обхода блокировок</string>
    <string name="card_byedpi_title">ByeDPI (Десинхронизация ТСПУ)</string>
    <string name="card_byedpi_desc">Прямой доступ к YouTube, Discord без прокси и VPN-серверов за рубежом</string>
    <string name="card_tg_desc">Автономный MTProto прокси с Cloudflare WebSocket транспортом</string>
    <string name="card_warp_desc">Полноценный туннель Cloudflare WARP с защитой AWG 2.0 от блокировок</string>
    <string name="byedpi_active_btn">Отключить ByeDPI</string>
    <string name="byedpi_inactive_btn">Включить ByeDPI</string>
    <string name="tg_active_btn">Отключить Telegram Прокси</string>
    <string name="tg_inactive_btn">Включить Telegram Прокси</string>
    <string name="warp_active_btn">Отключить WARP</string>
    <string name="warp_inactive_btn">Включить WARP</string>
    <string name="nav_to_advanced_hint">Нажмите для выбора конкретных стратегий ByeDPI, автоподбора, экспорта WARP и тонкой настройки ядра</string>
    <string name="btn_select_strategy">Выбрать стратегию вручную</string>
    <string name="btn_autotune">Автоматический подбор стратегии</string>
    <string name="btn_stop_autotune">Остановить автоподбор</string>
    <string name="split_tunnel_title">Раздельное туннелирование</string>
    <string name="split_tunnel_subtitle">Выбор приложений, работающих через обход</string>
    <string name="split_tunnel_mode_title">Режим фильтрации</string>
    <string name="split_tunnel_mode_all">Весь трафик устройства (без исключений)</string>
    <string name="split_tunnel_mode_whitelist">Туннелировать только выбранные</string>
    <string name="split_tunnel_mode_blacklist">Туннелировать всё, кроме выбранных</string>
    <string name="split_tunnel_select_apps">Выбрать приложения</string>
    <string name="split_tunnel_apps_count">Выбрано приложений: %1$d</string>
    <string name="split_tunnel_search_hint">Поиск приложения...</string>
    <string name="split_tunnel_select_all">Выбрать все</string>
    <string name="split_tunnel_deselect_all">Снять все</string>
    <string name="card_vless_title">VLESS / Shadowsocks / Trojan / HY2</string>
    <string name="card_vless_desc">Универсальный клиент Xray: поддержка VLESS (Reality), Shadowsocks, VMess, Trojan и Hysteria 2</string>
    <string name="vless_active_btn">Отключить Прокси</string>
    <string name="vless_inactive_btn">Включить Прокси</string>
    <string name="vless_manage_btn">Подписки и серверы</string>
    <string name="vless_no_servers">Нет добавленных серверов (VLESS / SS / VMess / Trojan / HY2)</string>
    <string name="vless_servers_title">Серверы и прокси-ключи</string>
    <string name="vless_add_single">Вставить ключ (vless, hy2, ss, vmess, trojan)</string>
    <string name="vless_add_subscription">Добавить ссылку на подписку</string>
    <string name="vless_enter_key_hint">Вставьте ссылку vless://, hy2://, ss://, vmess://, trojan://...</string>
    <string name="vless_enter_sub_hint">https://example.com/sub/...</string>
    <string name="vless_sub_updating">Обновление подписки...</string>
    <string name="vless_sub_success">Успешно загружено серверов: %1$d</string>
    <string name="vless_sub_error">Ошибка обновления: %1$s</string>
    <string name="vless_added_success">Сервер успешно добавлен!</string>
    <string name="star_dialog_text">Пожалуйста, поставьте звезду на наш GitHub. Для вас это 1 минута времени, а для нас большая мотивация дальше делать обновления</string>
    <string name="star_dialog_btn_github">Перейти на наш GitHub</string>
    <string name="star_dialog_btn_never">Больше не показывать</string>
    <string name="star_dialog_btn_later">Позже</string>
    <string name="setup_wizard_title">Первоначальная настройка</string>
    <string name="setup_wizard_desc">Добро пожаловать в ByeDPI Россия! Приложение автоматически сгенерирует профиль Cloudflare WARP и протестирует стратегии ByeDPI для выбора наилучшей скорости.</string>
    <string name="setup_wizard_btn_start">Начать настройку</string>
    <string name="setup_wizard_btn_skip">Пропустить</string>
    <string name="tg_channel_title">Наш Telegram-канал</string>
    <string name="builtin_subs_title">Подписки для белых списков (Б/С)</string>
    <string name="builtin_subs_subtitle">Готовые базы серверов от ru-wbl (GitVerse) для обхода мобильных белых списков:</string>
    <string name="builtin_subs_custom_url">Или введите свою ссылку на подписку:</string>
    <string name="builtin_subs_load_custom_btn">Загрузить свою ссылку</string>
    <string name="disguise_clock">Часы</string>
    <string name="disguise_clock_stopwatch">Секундомер</string>
    <string name="disguise_start">Старт</string>
    <string name="disguise_reset">Сброс</string>
</resources>