<?xml version="1.0" encoding="utf-8" ?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.MainActivity">

    <item
        android:id="@+id/action_telegram"
        android:orderInCategory="1"
        android:title="@string/tg_channel_title"
        android:icon="@drawable/ic_telegram_24"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_github"
        android:orderInCategory="2"
        android:title="GitHub"
        android:icon="@drawable/ic_github_36"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="2"
        android:title="@string/title_settings"
        android:icon="@drawable/baseline_settings_24"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_save_logs"
        android:orderInCategory="3"
        android:title="@string/save_logs"
        app:showAsAction="never" />

</menu>
